Added 'GetAccountNonce' api method. Fixed 'Balance' property in GetAccountResponse.

--- a/EtherchainApi/EtherchainApi.csproj
+++ b/EtherchainApi/EtherchainApi.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="ApiResponses\EtherchainApiResponse.cs" />
     <Compile Include="ApiResponses\GetAccountCountResponse.cs" />
+    <Compile Include="ApiResponses\GetAccountNonceResponse.cs" />
     <Compile Include="ApiResponses\GetAccountResponse.cs" />
     <Compile Include="EtherchainApiClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
