--- a/EtherchainApi/EtherchainApi.csproj
+++ b/EtherchainApi/EtherchainApi.csproj
@@ -52,6 +52,8 @@
     <Compile Include="ApiResponses\GetAccountCountResponse.cs" />
     <Compile Include="ApiResponses\GetAccountNonceResponse.cs" />
     <Compile Include="ApiResponses\GetAccountResponse.cs" />
+    <Compile Include="ApiResponses\GetAccountSourceResponse.cs" />
+    <Compile Include="ApiResponses\GetAccountTransactionsResponse.cs" />
     <Compile Include="EtherchainApiClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
