--- a/EtherchainApi.Tests/EtherchainApi.Tests.csproj
+++ b/EtherchainApi.Tests/EtherchainApi.Tests.csproj
@@ -55,12 +55,15 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="EtherchainApiClientTest.cs" />
+    <Compile Include="EtherchainApiClientAccountsTest.cs" />
+    <Compile Include="EtherchainApiClientBlocksTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
