--- a/EtherchainApi.Tests/EtherchainApi.Tests.csproj
+++ b/EtherchainApi.Tests/EtherchainApi.Tests.csproj
@@ -44,6 +44,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
@@ -64,6 +65,7 @@
   <ItemGroup>
     <Compile Include="EtherchainApiClientAccountsTest.cs" />
     <Compile Include="EtherchainApiClientBlocksTest.cs" />
+    <Compile Include="EtherchainApiClientTransactionsTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
