--- a/EtherchainApi/EtherchainApi.csproj
+++ b/EtherchainApi/EtherchainApi.csproj
@@ -1,92 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{CF548D18-2C1F-481C-AD6B-DB38B2386953}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EtherchainApi</RootNamespace>
-    <AssemblyName>EtherchainApi</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
+    <TargetFramework>net6.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="RestSharp, Version=105.2.3.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\RestSharp.105.2.3\lib\net452\RestSharp.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Numerics" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="RestSharp" Version="107.3.0" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="ApiResponses\Blocks\BlockData.cs" />
-    <Compile Include="ApiResponses\Blocks\GetBlocksByNumberOfHashResponse.cs" />
-    <Compile Include="ApiResponses\Blocks\GetBlocksCountResponse.cs" />
-    <Compile Include="ApiResponses\Blocks\GetBlocksResponse.cs" />
-    <Compile Include="ApiResponses\Blocks\GetTxForBlockResponse.cs" />
-    <Compile Include="ApiResponses\EtherchainApiResponse.cs" />
-    <Compile Include="ApiResponses\Accounts\GetAccountCountResponse.cs" />
-    <Compile Include="ApiResponses\Accounts\GetAccountNonceResponse.cs" />
-    <Compile Include="ApiResponses\Accounts\GetAccountResponse.cs" />
-    <Compile Include="ApiResponses\Accounts\GetAccountSourceResponse.cs" />
-    <Compile Include="ApiResponses\Accounts\GetAccountsResponse.cs" />
-    <Compile Include="ApiResponses\Accounts\GetAccountTransactionsResponse.cs" />
-    <Compile Include="ApiResponses\Accounts\GetMinedBlocksHistoryResponse.cs" />
-    <Compile Include="ApiResponses\Accounts\GetMinedBlocksResponse.cs" />
-    <Compile Include="ApiResponses\Accounts\GetMinedUnclesHistoryResponse.cs" />
-    <Compile Include="ApiResponses\Accounts\GetMultipleAccountsResponse.cs" />
-    <Compile Include="ApiResponses\Transactions\GetTransactionCountResponse.cs" />
-    <Compile Include="ApiResponses\Transactions\GetTransactionResponse.cs" />
-    <Compile Include="ApiResponses\Transactions\GetTransactionsResponse.cs" />
-    <Compile Include="ApiResponses\Transactions\TransactionData.cs" />
-    <Compile Include="EtherchainApiClient.cs" />
-    <Compile Include="EtherchainApiClientAccounts.cs" />
-    <Compile Include="EtherchainApiClientBlocks.cs" />
-    <Compile Include="EtherchainApiClientTransactions.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ApiResponses\Statistics\" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
